[project]
name = "lineage-to-graph"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shinichi Suwa", email = "suwash01@gmail.com" }
]
dependencies = [
    "pyyaml>=6.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lineage_to_graph"]
